<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name"
            android:inputType="textMultiLine" />

        <TextView
            style="@style/headerst"
            android:layout_marginBottom="16dp"
            android:text="@string/toppings" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/chk"
            style="@style/toppings"
            android:text="@string/whippedcream" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/cho"
            style="@style/toppings"
            android:text="@string/chocolate" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/ice"
            style="@style/toppings"
            android:layout_marginLeft="16dp"
            android:text="@string/icecream" />

        <TextView
            style="@style/headerst"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dec"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:onClick="decrement"
                android:text="-"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/quant"
                style="@style/body"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="0" />

            <Button
                android:id="@+id/inc"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:onClick="increment"
                android:text="+"
                android:textSize="24sp" />
        </LinearLayout>


        <TextView
            style="@style/headerst"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/price" />

        <TextView
            android:id="@+id/price"
            style="@style/body"
            android:paddingBottom="16dp"
            android:text="$0" />

        <Button
            android:id="@+id/order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="orders"
            android:text="@string/order" />


    </LinearLayout>
</ScrollView>